# sctoolsgw

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi.yml
docs/source/: conf.py
src/sctoolsgw/: __init__.py  _version.py  aggregate.py  cluster.py  enrich.py  find_degs.py  quick_process.py  sctoolsgw.py
src/sctoolsgw.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
