[project]
name = "sctoolsgw"
version = "0.0.4"
authors = [
    { name="Griffen Wakelin", email="wakelin@dal.ca" }
]
maintainers = [
    { name="Griffen Wakelin", email="wakelin@dal.ca" }
]
description = "convenience wrappers around common scanpy functions and workflows"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "scanpy>=1.9.5",
    "leidenalg>=0.10.1",
    "python-igraph>=0.10.8",
    "gseapy>=1.1.2"
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/wakelin-g/sctoolsgw"
Issues = "https://github.com/wakelin-g/sctoolsgw/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
