[build-system]
requires = ["setuptools>64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "sctoolsgw"
dynamic = ["version"]
authors = [
    { name="Griffen Wakelin", email="wakelin@dal.ca" }
]
maintainers = [
    { name="Griffen Wakelin", email="wakelin@dal.ca" }
]
description = "single-cell wrappers and convenience functions for internal use"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scanpy>=1.9.1",
    "leidenalg",
    "igraph",
    "gseapy",
    "pydeseq2>=0.4.1",
    "decoupler>=1.8.0",
    "bbknn>=1.6.0",
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/wakelin-g/sctoolsgw"
Issues = "https://github.com/wakelin-g/sctoolsgw/issues"

[tool.setuptools_scm]
write_to = "src/sctoolsgw/_version.py"

[tool.black]
line-length = 89

[tool.ruff]
line-length = 89
